Moved the styles.css file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Tic Tac Toe</title>
-    %leptos%
-      { headers }
+    <link rel="stylesheet" href="styles.css" />
     </head>
   <body>
     <div id="game-root"></div>
